Mon Oct  4 11:59:02 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Better SMTP message when virus is found
  * libclamav/untar.c:	Handle tar files less than 512 bytes
  * libclamav/mbox.c:	Better error message on RFC2047 decode error

Mon Oct  4 03:09:46 CEST 2004 (tk)
----------------------------------
  * libclamav/scanners.c: respect file size limit in cli_scanmscab()

Sun Oct  3 17:04:27 CEST 2004 (tk)
----------------------------------
  * libclamav, clamd: use readdir_r when available

Sat Oct  2 23:02:39 CEST 2004 (tk)
----------------------------------
  * configure: improve config file installation (patch by Andrey J. Melnikoff
	       (TEMHOTA) <temnota*kmv.ru>)
  * sigtool: fix --unpack/--unpack-current problem on Cygwin and FreeBSD

Sat Oct  2 18:52:32 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Fix crash if %h is used in a template and --headers is
				not set reported by "Sergey Y. Afonin"
				<asy@kraft-s.ru>

Sat Oct  2 16:41:02 BST 2004 (njh)
----------------------------------
  * libclamav/table.c:	Fix compilation problem when --enable-debug is not set

Fri Oct  1 14:50:55 BST 2004 (njh)
----------------------------------
  * libclamav/message.c:	Fixed handling of the end of yEnc attachments

Fri Oct  1 08:57:42 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Better error message for 'message/partial' emails

Fri Oct  1 02:28:08 CEST 2004 (tk)
----------------------------------
  * clamd: add new directive IdleTimeout (patch by Andrey J. Melnikoff (TEMHOTA)
	   <temnota*kmv.ru>)
  * clamscan/others.c: preserve Mac OS X resource forks in filecopy() 
		       (thanks to Remi Mommsen <remigius.mommsen*cern.ch>)
  * cosmetic fixes (thanks to Damian Menscher <menscherr*uiuc.edu>)

Thu Sep 30 22:48:53 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Remove unneeded strdup() calls
			Fix some "filename too long" errors when MailFollowURLs
				is set
